<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="description">Description…</string>
    <string name="take_picture">Take Picture</string>
    <string name="posted_image">posted_image</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading…</string>
    <string name="profile_image">profile_image</string>
    <string name="logo">logo</string>
    <string name="zero_likes">0 likes</string>
</resources>